--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -15,5 +15,12 @@
     "Key": "$uperHardPas$$w0rd123",
     "Issuer": "www.softclub.tj",
       "Audience": "softclub.tj"
+  },
+
+  "MailSettings": {
+    "Mail": "yaqubzodamuhammad3@gmail.com",
+    "DisplayName": "Name",
+    "Password": "qqehjrzajevrirfk",
+    "Port": 465
   }
 }
