--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
    "ConnectionStrings": {
-     "DefaultConnection": "Server=localhost;Port=5432;Database=Super-Admin;User Id=postgres;Password=13577;"
+     "DefaultConnection": "Server=localhost;Port=5432;Database=AdminSuperMainFinal;User Id=postgres;Password=233223;"
      
    },
 
